package org.main_java.sistema_monitoreo_jurassic.controller;

public class UsuarioController {
}
