package org.main_java.sistema_monitoreo_jurassic.domain;

public class Datos {
}
