package org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.omnivoro;

import org.main_java.sistema_monitoreo_jurassic.domain.dinosaurios.Dinosaurio;

public abstract class Omnivoro extends Dinosaurio {
}
