package org.main_java.sistema_monitoreo_jurassic.model;

public class UsuarioDTO {

}