package org.main_java.sistema_monitoreo_jurassic.model.dinosauriosDTO;

public abstract class DinosaurioDTO {
}
