package org.main_java.sistema_monitoreo_jurassic.model.sensoresDTO;

public abstract class SensorDTO {
}
