package org.main_java.sistema_monitoreo_jurassic.repos;

public interface UsuarioRepository {
}
