package org.main_java.sistema_monitoreo_jurassic.service;

public class EventoService {
}
