package org.main_java.sistema_monitoreo_jurassic.service.factory;

public class DinosaurioFactory {
}
